<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2015 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:testdpc="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/organization_info">
        <com.afwsamples.testdpc.common.preference.DpcPreference
            android:key="set_organization_color"
            android:title="@string/set_organization_color"
            testdpc:minSdkVersion="N" />
        <com.afwsamples.testdpc.common.preference.DpcEditTextPreference
            android:key="set_profile_organization_name"
            android:title="@string/set_organization_name"
            testdpc:minSdkVersion="N" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cross_profile_intents">
        <com.afwsamples.testdpc.common.preference.DpcPreference
            android:key="add_cross_profile_intent_filter"
            android:title="@string/add_cross_profile_intents_title"
            testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcPreference
            android:key="clear_cross_profile_intent_filters"
            android:title="@string/clear_cross_profile_intents"
            testdpc:minSdkVersion="L" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cross_profile_widget_providers_title">
        <com.afwsamples.testdpc.common.preference.DpcPreference
            android:key="add_cross_profile_app_widgets"
            android:title="@string/add_cross_profile_app_widget_providers"
            testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcPreference
            android:key="remove_cross_profile_app_widgets"
            android:title="@string/remove_cross_profile_app_widget_providers"
            testdpc:minSdkVersion="L" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/policies_title">
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference
            android:key="disable_bluetooth_contact_sharing"
            android:title="@string/disable_bluetooth_contact_sharing"
            testdpc:minSdkVersion="M" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference
            android:key="disable_cross_profile_caller_id"
            android:title="@string/disable_cross_profile_caller_id"
            testdpc:minSdkVersion="L" />
        <com.afwsamples.testdpc.common.preference.DpcSwitchPreference
            android:key="disable_cross_profile_contacts_search"
            android:title="@string/disable_cross_profile_contacts_search"
            testdpc:minSdkVersion="N" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/work_telephony_title">
        <com.afwsamples.testdpc.common.preference.DpcPreference
            android:key="managed_subscriptions"
            android:title="@string/managed_subscriptions_title"
            testdpc:minSdkVersion="U" />
    </PreferenceCategory>

</PreferenceScreen>
