<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2016 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:id="@+id/select_package_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_selected_package"/>

        <EditText
                android:id="@+id/selected_package_current"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/selected_package_none"
            tools:ignore="TextFields" />
    </LinearLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/select_app_instructions"/>

    <ListView
            android:id="@+id/select_app_list"
            android:scrollbars="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </ListView>

    <!-- For extension by subclasses of SelectAppFragment -->
    <FrameLayout
        android:id="@+id/extension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </FrameLayout>

    <EditText
            android:id="@+id/selected_package_new"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/selected_package_new_label"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/selected_package_set"
            android:layout_width="90dip"
            android:layout_height="50dip"
            android:text="@string/selected_package_set"
            tools:ignore="ButtonStyle" />

        <Button android:id="@+id/selected_package_clear"
            android:layout_width="90dip"
            android:layout_height="50dip"
            android:text="@string/selected_package_clear"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
