<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2018 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:icon="@drawable/ic_enterprise_blue"
    app:sucHeaderText="@string/set_up_management_header"
    app:sucUsePartnerResource="true">

    <LinearLayout
        style="@style/SudContentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/managed_account_desc"
            style="@style/SudDescription.Glif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/managed_account_message"
            android:visibility="gone" />

        <TextView
            android:id="@+id/managed_account_name"
            style="@style/SudDescription.Glif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_padding_between_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/setup_management_message_id"
            style="@style/SudDescription.Glif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_management_message" />

        <RadioGroup
            android:id="@+id/setup_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/content_padding_between_text">

            <RadioButton
                android:id="@+id/setup_managed_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/set_up_managed_profile"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/setup_device_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_up_device_owner"
                android:visibility="gone" />
        </RadioGroup>

        <include layout="@layout/provisioning_params_display" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>
